# src/controllers/authController.js
@@ -1,20 +1,26 @@
 module.exports = function authController(authService) {
   const signUp = (req, res, next) => {
     authService.signUp(req.body)
-    .then(response => res.status(201).json(response))
-    .catch(error => next(error));
+      .then(response => res.status(201).json(response))
+      .catch(next);
   };
 
   const signIn = async (req, res, next) => {
     authService.signIn(req.body)
-    .then(response => res.json(response))
-    .catch(error => next(error));
+      .then(response => res.json(response))
+      .catch(next);
+  }
+
+  const validateToken = async (req, res, next) => {
+    authService.validateToken(req.body)
+      .then(response => res.json(response))
+      .catch(next);
   }
 
   const refreshToken = async (req, res, next) => {
     authService.refreshToken(req.body)
-    .then(response => res.json(response))
-    .catch(error => next(error));
+      .then(response => res.json(response))
+      .catch(next);
   }
 
   const deleteUser = async (req, res, next) => {
@@ -26,6 +32,7 @@ module.exports = function authController(authService) {
   return {
     signUp,
     signIn,
+    validateToken,
     refreshToken,
     deleteUser
   };
